src/integration_tests/carddav/snapshots/rustical__integration_tests__carddav__addressbook__propfind_body.snap
---
source: src/integration_tests/carddav/addressbook.rs
expression: body
---
<?xml version="1.0" encoding="utf-8"?>
<multistatus xmlns="DAV:" xmlns:CAL="urn:ietf:params:xml:ns:caldav" xmlns:CARD="urn:ietf:params:xml:ns:carddav" xmlns:CS="http://calendarserver.org/ns/" xmlns:PUSH="https://bitfire.at/webdav-push">
    <response>
        <href>/carddav/principal/user/contacts/</href>
        <propstat>
            <prop>
                <CARD:addressbook-description>Amazing contacts!</CARD:addressbook-description>
                <CARD:supported-address-data>
                    <CARD:address-data-type content-type="text/vcard" version="3.0"/>
                    <CARD:address-data-type content-type="text/vcard" version="4.0"/>
                </CARD:supported-address-data>
                <CARD:supported-collation-set>
                    <CARD:supported-collation>i;ascii-casemap</CARD:supported-collation>
                    <CARD:supported-collation>i;unicode-casemap</CARD:supported-collation>
                    <CARD:supported-collation>i;octet</CARD:supported-collation>
                </CARD:supported-collation-set>
                <supported-report-set>
                    <supported-report>
                        <report>
                            <CARD:addressbook-multiget/>
                        </report>
                    </supported-report>
                    <supported-report>
                        <report>
                            <sync-collection/>
                        </report>
                    </supported-report>
                </supported-report-set>
                <CARD:max-resource-size>10000000</CARD:max-resource-size>
                <sync-token>github.com/lennart-k/rustical/ns/0</sync-token>
                <CS:getctag>github.com/lennart-k/rustical/ns/0</CS:getctag>
                <PUSH:transports>
                    <PUSH:web-push/>
                </PUSH:transports>
                <PUSH:topic>[PUSH_TOPIC]</PUSH:topic>
                <PUSH:supported-triggers>
                    <PUSH:content-update>
                        <depth>1</depth>
                    </PUSH:content-update>
                    <PUSH:property-update>
                        <depth>1</depth>
                    </PUSH:property-update>
                </PUSH:supported-triggers>
                <resourcetype>
                    <collection/>
                    <CARD:addressbook/>
                </resourcetype>
                <displayname>Contacts</displayname>
                <current-user-principal>
                    <href>/carddav/principal/user/</href>
                </current-user-principal>
                <current-user-privilege-set>
                    <privilege>
                        <all/>
                    </privilege>
                </current-user-privilege-set>
                <owner>
                    <href>/carddav/principal/user/</href>
                </owner>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
    </response>
</multistatus>
